test/libyul/yulSyntaxTests/hex_assignment.yul
{
    let x := hex"0011"
}
// ----
// ParserError 1856: (15-24): Literal or identifier expected.
